--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -87,3 +87,10 @@
         }
        }
 }
+@media (prefers-color-scheme:dark) {
+    .HomePosts{
+        // box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+
+    }
+    
+}
