--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -25,3 +25,10 @@
 
     }
 }
+
+@media (prefers-color-scheme:dark) {
+    .ChatsPage{
+        background-color: black;
+        color: #FF6410;
+    }
+}
