--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -26,3 +26,12 @@
 
     }
 }
+
+
+@media (prefers-color-scheme:dark) {
+    .UserPage{
+        background-color: black;
+        color: #FF6410;
+
+    }
+}
