--- a/src/components/ChatsFlow/ChatsFlow.module.scss
+++ b/src/components/ChatsFlow/ChatsFlow.module.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     overflow-y: scroll;
     border: solid 1px white;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     border-radius: 7px;
     animation: fadeIn 0.5s;
 }
@@ -30,5 +30,13 @@
         align-items: center;
         justify-content: center;
 
+    }
+}
+
+@media (prefers-color-scheme:dark) {
+    .ChatsFlow{
+        background-color: rgb(28,28,28);
+        box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+    
     }
 }
