--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -43,3 +43,17 @@
         }
     }
 }
+
+
+@media (prefers-color-scheme:dark) {
+    .NavBarDiv{
+        background-color: rgb(28,28,28);
+        .titles{
+            color:white;
+
+        }
+        .titles:hover{
+            background-color: #FF6410;
+        }
+    }
+}
