--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -34,12 +34,13 @@
 
 @media (max-width:900px) {
     .NavBarDiv{
-        margin-top: 90vh;
-        height: 10vh;
+        position: fixed;
+
+        height: 5vh;
         bottom: 0;
         z-index: 1;
         .titles{
-            height: 10vh;
+            height: 5vh;
         }
     }
 }
