--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -7,15 +7,7 @@
     background-color: white;
     border-radius: 7px;
     color:black;
-    h2,h3,h4{
-        margin: 0;
-        align-self: flex-start;
-        padding-left: 1vw;
-    }
-    h4{
-        align-self: flex-end;
-        padding-right: 1vw;
-    }
+    
     p{
         width: 55vw;
         height: 40vh;
@@ -28,7 +20,8 @@
         display: flex;
         width: 55vw;
 
-        h8{
+        h6{
+            font-size: 15px;
             padding-left: 1vw;
         }
         
@@ -41,24 +34,32 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 100%;
-        h2,h3,h4{
-            margin: 0;
-            align-self: flex-start;
-            padding-left: 1vw;
+        width: 90vw;
+        overflow-x: hidden;
+        overflow-y: hidden;
+        header{
+            height: 10vh;
+            width: 90vw;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+
+
         }
         p{
+            justify-self: flex-start;
             width: 80vw;
             background-color: rgb(230,229,234);
+
             height: 40vh;
         }
         .interactions{
             display: flex;
             width: 55vw;
             justify-content: space-evenly;
-            h8{
 
-            }
             
         }
     }
