--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -80,7 +80,7 @@
         animation: fadeIn 1s ;
     }
     .userInfo{
-        top:10vh;
+        top:15vmin;
         display: flex;
         flex-direction: column;
         align-items: center;
