--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -7,6 +7,13 @@
     background-color: white;
     border-radius: 7px;
     color:black;
+    header{
+        height: 5vh;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
     
     p{
         width: 55vw;
@@ -19,7 +26,6 @@
     .interactions{
         display: flex;
         width: 55vw;
-
         h6{
             font-size: 15px;
             padding-left: 1vw;
@@ -38,12 +44,14 @@
         overflow-x: hidden;
         overflow-y: hidden;
         header{
+
             height: 10vh;
             width: 90vw;
+            padding-top: 10px;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             align-items: center;
-            justify-content: center;
+            justify-content: space-evenly;
 
 
 
