backend day Connected to local database

--- a/src/components/ChatsFlow/ChatsFlow.module.scss
+++ b/src/components/ChatsFlow/ChatsFlow.module.scss
@@ -22,7 +22,7 @@
 @media (max-width:900px) {
     .ChatsFlow{
         position: absolute;
-        margin-top: 30vmin;
+        top: 15vh;
         width: 90vw;
         height: 68vh;
         display: flex;
