--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -73,8 +73,8 @@
 @media (max-width:900px) {
     .UserAside{
     position: absolute;
-    margin-top: 3vmin;
-    width: 88vw;
+    margin-top: 10vh;
+    width: 90vw;
     height: 30vh;
     display: flex;
     flex-direction: row;
