--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -18,7 +18,6 @@
         justify-content: center;
         align-items: center;
         color: black;
-
         width: 100vw;
         height: 41vh;
         h1{
@@ -48,7 +47,8 @@
 
         width: 80vw;
         li{
-
+            background-color: pink;
+            width: 80vw;
         }
     }
 }
