--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -15,10 +15,11 @@
         align-items: center;
         justify-content: flex-start;
         left: 80vw;
-        top:10vh;
+        top:15vmin;
         position: absolute;
         width: 20vw;
         height: 80vh;
+        border-radius: 7px;
         h4{
             color: sblack;
         }
@@ -84,12 +85,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
         left: 0;
         position: absolute;
         color: orange;
         width: 20vw;
         height: 50vh;
+        border-radius: 7px;
         .userPic{
             border-radius: 100px;
             display: flex;
