all user routes work adding and testing the rest of the routes starting with forums

--- a/src/components/Logout/Logout.module.scss
+++ b/src/components/Logout/Logout.module.scss
@@ -1,4 +1,4 @@
-.Logout{
+.LogOut{
     top: 10vh;
     background-color: rgb(52,120,246);
     color: white;
@@ -10,7 +10,7 @@
     
 }
 
-.Logout:hover{
+.LogOut:hover{
     transition: 1s;
     padding-left: 15px;
     padding-bottom: 2px;
