--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -37,14 +37,14 @@
         border-radius: 100%;
 
         
-        p{
+        button{
             border: solid 2px ;
             color: white;
             display: flex;
             justify-content: center;
             align-items: center;
             border-radius: 50px;
-            
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
             width: 2vw;
             height: 2vw;
         }
@@ -77,7 +77,8 @@
     .UserAside{
     position: absolute;
     margin-top: 10vh;
-    width: 90vw;
+    width: 100vw;
+    left:0;
     height: 30vh;
     display: flex;
     flex-direction: row;
@@ -102,9 +103,10 @@
         border-radius: 50px;
         width: 20vw;
 
-        p{
-            width: 20px;
-            height: 20px;
+        button{
+            margin: 2px;
+            width: 25px;
+            height: 25px;
             color: white;
             display: flex;
             justify-content: center;
