ladies and gentlement we have connected to the backend

--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -44,9 +44,10 @@
             
         }
         .inputText{
+            
             background-color: green;
             font-family: 'Gruppo', sans-serif;
-            color:white;
+            color:black;
             height: 20px;
             width: 25vw;
             background-color: white;
