its working really well so far its awesome jerry

--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -28,7 +28,7 @@
 
 @media (prefers-color-scheme:dark) {
     .ChatsPage{
-        background-color: black;
+        background-color: rgb(33,33,33);
         color: #FF6410;
     }
 }
