--- a/src/components/Logout/Logout.module.scss
+++ b/src/components/Logout/Logout.module.scss
@@ -1,8 +1,8 @@
 .LogOut{
     top: 10vh;
-    background-color: rgb(52,120,246);
+    //background-color: rgb(52,120,246);
     color: white;
-    border:  solid white 1px;
+    //border:  solid white 1px;
     border-radius: 50px;
     padding-left: 10px;
     padding-right: 10px;
