--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -8,8 +8,8 @@
     border-radius: 7px;
     color:black;
     header{
-        height: 5vh;
-        width: 100%;
+        height: 6vh;
+        width: 90%;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -32,6 +32,9 @@
         h6{
             font-size: 15px;
             padding-left: 1vw;
+        }
+        .like:hover, .dislike:hover, .comment:hover{
+            color:#FF6410;
         }
         
     }
@@ -73,6 +76,7 @@
 
             
         }
+        
     }
 }
 
@@ -82,6 +86,10 @@
         background-color: rgb(28,28,28);
         .interactions{
             color: #FF6410;
+            .like:hover, .dislike:hover, .comment:hover{
+                color:aqua;
+            }
         }
     }
+    
 }
