fixed postModal in userPage and added dynamic rendering of forumPage based off of url ID

--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -17,7 +17,7 @@
 
     h1{
         position: relative;
-        color: white;
+        color: black;
     }
     .userPic{
         background-color: white;
