--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -35,6 +35,7 @@
         }
         .like:hover, .dislike:hover, .comment:hover{
             color:#FF6410;
+            cursor: pointer;
         }
         
     }
