--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -64,6 +64,7 @@
         .setting:hover, .friends:hover, .edit:hover,  .create:hover{
             transition: 0.5s;
             padding: 1px;
+            cursor: pointer;
         }
     }
 }
