--- a/src/components/Logout/Logout.module.scss
+++ b/src/components/Logout/Logout.module.scss
@@ -1,21 +1,21 @@
 .LogOut{
     top: 10vh;
     //background-color: rgb(52,120,246);
-    color: white;
     //border:  solid white 1px;
-    border-radius: 50px;
     padding-left: 10px;
     padding-right: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    width: 10vw;
+    display: flex;
+    justify-content: flex-start;
+
+    //box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     
 }
 
 .LogOut:hover{
-    transition: 1s;
-    padding-left: 15px;
-    padding-bottom: 2px;
-    padding-top: 2px;
-    padding-right: 15px;
+    border-radius: 7px;
+    background-color: rgb(180,217,247);
+    cursor: pointer;
 }
 @media(max-width:900px){
     .Logout{
