--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,14 +1,15 @@
 .HomePage{
-
-    top:5vmin;
-    height: 100%;
+    position: absolute;
+    top:30px;;
+    height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
     //background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
-    background-color: white;
-    
+
+    animation: fadeIn 1s;
     .buttonDiv{
         display: flex;
         flex-direction: column;
@@ -79,7 +80,7 @@
 
     }
     .hidden{
-        animation: fadeIn 1s ;
+        animation: fadeIn 2s ;
     }
     .userInfo{
         top:15vmin;
