just reversed like 2hrs of workkkkkk

--- a/src/components/Logout/Logout.module.scss
+++ b/src/components/Logout/Logout.module.scss
@@ -16,6 +16,7 @@
     border-radius: 7px;
     background-color: rgb(180,217,247);
     cursor: pointer;
+    color: white;
 }
 @media(max-width:900px){
     .Logout{
