--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,12 +1,12 @@
 .HomePage{
     position: absolute;
-    top:30px;;
+    top:30px;
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
+    //background-color: rgb(227,211,166);
     //background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
 
     animation: fadeIn 1s;
