a lot of css need to test all forumAPIs and then posts then adding like dislikes and commenting so ill need a PostPage for that then i can start the messaging side with webSockets then and adding friends functionality then how to host images on the site and maybe videos

--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -20,11 +20,12 @@
         color: black;
     }
     .userPic{
-        background-color: white;
+
         display: flex;
         justify-content: center;
         align-items: center;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+        box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+
         width: 15vw;
         height: 15vw;
         border-radius: 90px;
