--- a/src/components/Logout/Logout.module.scss
+++ b/src/components/Logout/Logout.module.scss
@@ -2,19 +2,18 @@
     top: 10vh;
     //background-color: rgb(52,120,246);
     //border:  solid white 1px;
-    padding-left: 10px;
-    padding-right: 10px;
+
     width: 10vw;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
 
     //box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     
 }
 
 .LogOut:hover{
-    border-radius: 7px;
-    background-color: rgb(180,217,247);
+    border-radius: 4px;
+    background-color: #FF6410;
     cursor: pointer;
     color: white;
 }
