--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -29,9 +29,14 @@
         section{
             
             display: flex;
-            justify-content: center;
-            
+            justify-content: space-evenly;
+            width: 100vw;
+            background-color: rgb(171,211,246);
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
             button{
+                padding: 5px;
+                background-color: white;
+                border-color: white;
                 margin: 10px;
             }
         }
