--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -19,7 +19,23 @@
         right: 2.5vmin;
         top: -2vmin;
     }
-
+    h2{
+        color: black;
+        font-size: 15px;
+        display: flex;
+        justify-content: center;
+        overflow: hidden; /* Ensures the text doesn't overflow its container */
+        overflow: hidden;
+        white-space: nowrap;
+        margin: 0;
+        margin-left: 8vmin;
+        display: inline-block;
+        letter-spacing: .15em;
+        animation: typing 3s steps(40, end) reverse, blink-caret .75s step-end infinite;
+        overflow: hidden;
+        display: inline-block;
+        border-right: .15em solid #000;
+    }
     .title {
 
         width: 50vw;
@@ -162,7 +178,10 @@
         background-color: rgb(28, 28, 28);
         background-image: none;
         background-size: cover;
+        h2{
+            color: #FF6410;
 
+        }
         .title {
             color: white;
 
@@ -174,5 +193,24 @@
 
             }
         }
+    }
+}
+
+
+@keyframes typing {
+    from {
+        width: 100%;
+    }
+    to {
+        width: 0;
+    }
+}
+
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent;
+    }
+    50% {
+        border-color: #000;
     }
 }
