--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    top:5vh;
+    top:30px;
     align-items: center;
     width: 100vw;
     animation: fadeIn 1s;
@@ -11,6 +11,7 @@
     
     background-size: cover;
     overflow-y: scroll;
+    
     header{
         
         display: flex;
@@ -40,6 +41,7 @@
                 margin: 10px;
             }
         }
+
         
     }
     ul{
@@ -53,8 +55,59 @@
 
         width: 80vw;
         li{
+            color:white;
             width: 80vw;
         }
+    }
+    .postToForum{
+        width: 100vw;
+        height: 100vh;
+        z-index: 3;
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        form{
+            border-radius: 7px;
+            animation: fadeIn 0.5s;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            width: 60vw;
+            height: 60vh;
+            color:black;
+            p{
+                padding-left: 50px;
+                margin-top: 0;
+                width: 60vw;
+                font-size: 30px;
+                justify-self: flex-start;
+                align-items: flex-start;
+            }
+            h1{
+
+            }
+            h2{
+                width: 30vw;
+
+            }
+            
+            input{
+                
+                width: 30vw;
+                
+            }
+            button{
+                margin-top: 10px;
+                width: 15vw;
+
+
+            }
+        }
+        
     }
 }
 
@@ -81,6 +134,7 @@
             h3{}
             h4{}
             section{
+
                 display: flex;
                 justify-content: center;
     
@@ -120,6 +174,7 @@
             }
 
             section{
+                background-color: #FF1100;
             button{
                 background-color: #FF6410;
                 border-radius: 7px;
@@ -134,7 +189,31 @@
                 
             }
         }
+        .postToForum{
+    
+            p{
+            }
+            form{
+                background-color: rgb(28,28,28);
+                color:white;
+                border: solid 2px white;
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+
+                h1{
+                }
+                h2{
+                }
+                
+                input{
+                    
+                }
+                button{
+                }
+            }
+            
+        }
     }
+    
 }
 
 @keyframes fadeIn {
