--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -44,6 +44,10 @@
 
         
     }
+    .noPost{
+        font-size: 25px;
+        color: white;
+    }
     ul{
         animation: fadeIn 2s;
         list-style-type: none;
@@ -109,6 +113,7 @@
         }
         
     }
+    
 }
 
 @media(max-width:900px){
