added postToforum functionality fixed posts title bug

--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -94,6 +94,7 @@
             }
             li{
                 background-color: black;
+                color:white;
             }
         }
     
